<resources>
    <string name="app_name">StoryApp</string>
    <string name="user_name">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="story">Story</string>
    <string name="add_story">Add Story</string>
    <string name="add_icon">add icon</string>
    <string name="error_email">Email error does not match</string>
    <string name="email">Email</string>
    <string name="error_password">Error Password must be at least 8 characters</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="hai_login">Hai! 👋</string>
    <string name="login_description">Welcome, Sign in to your account</string>
    <string name="login_btn">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="register_welcome">Welcome! 🙌</string>
    <string name="register_description">Create your new account and start a new adventure with us.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_login">Login</string>
    <string name="login_register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_succes">Login Successfully</string>
    <string name="register_succes">Register Successfully</string>
    <string name="logout">Log out</string>
    <string name="imagedetail">ImageDetail</string>
    <string name="author_name">author name</string>
    <string name="createdat">createdAt</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="uploud">Uploud</string>
    <string name="error_description_null">Error cannot be empty</string>
    <string name="empty_story">empty story</string>
    <string name="error_fetching_stories">Error fetching stories: %1$s</string>
    <string name="unknown_error">Unknown error</string>
    <string name="story_id_not_found">Story ID not found</string>
    <string name="failed_to_create_new_image_uri">Failed to create new image URI</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="unable_to_create_image_uri">Unable to create image URI</string>
    <string name="image_capture_failed">Image capture failed</string>
    <string name="no_media_selected">No media selected</string>
    <string name="error_getting_image_uri">Error getting image URI</string>
    <string name="map">Map</string>
    <string name="retry">retry</string>
    <string name="location">Location</string>
    <string name="token_not_found">Token not found</string>
    <string name="maps">Maps</string>
    <string name="style_parsing_failed">Style parsing failed.</string>
    <string name="can_t_find_style_error">Can\'t find style. Error: %1$s</string>
    <string name="new_image">New Image</string>
    <string name="image_from_camera">Image from Camera</string>
    <string name="location_permission_denied">Location Permission Denied</string>
    <string name="location_acquired">Location Acquired</string>
    <string name="location_not_found">Location not found</string>
    <string name="camera_permission_denied">camera permission denied</string>
</resources>